force-app/main/default/objects/Passport__c/Passport__c.object-meta.xml
<CustomObject>
    <label>Passport</label>
    <nameField>
        <label>Passport Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Passports</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>