force-app/main/default/objects/Passport__c/fields/Issuing_Country__c.field-meta.xml
<CustomField>
    <fullName>Issuing_Country__c</fullName>
    <label>Issuing Country</label>
    <type>TextArea</type>
</CustomField>