force-app/main/default/objects/Passport__c/fields/Main_Passport__c.field-meta.xml
<CustomField>
    <fullName>Main_Passport__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Main Passport</label>
    <type>Checkbox</type>
</CustomField>