force-app/main/default/objects/Passport__c/fields/Passport_Number__c.field-meta.xml
<CustomField>
    <fullName>Passport_Number__c</fullName>
    <label>Passport Number</label>
    <type>TextArea</type>
</CustomField>